--- a/project/src/App.scss
+++ b/project/src/App.scss
@@ -3,3 +3,14 @@
   font-weight: bold;
   border-bottom: 3px solid #0b5ed7;
 }
+
+.img-container{
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+} 
+
+.portal{
+  width: 300px;
+  height: 300px;
+}
