--- a/project/src/components/Search/Search.module.scss
+++ b/project/src/components/Search/Search.module.scss
@@ -1,6 +1,6 @@
 .input {
     width: 40%; border-radius: 8px;
-    border: 2px solid #0b5ed7;
+    border: 2px solid #29D292;
     box-shadow: 1px 3px 9px rgba($color: #000000, $alpha: 0.25);
     padding: 10px 15px;
     &:focus { outline: none; }
